force-app/main/default/objects/MUSW__Proceeding_Agenda_Item__c/MUSW__Proceeding_Agenda_Item__c.object-meta.xml
<CustomObject>
    <label>Proceeding Agenda Item</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proceeding Agenda Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>