force-app/main/default/objects/MUSW__Proceeding_Agenda_Item__c/fields/MUSW__Application__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Proceeding Agenda Items</relationshipLabel>
    <relationshipName>Proceeding_Agenda_Items</relationshipName>
    <type>Lookup</type>
</CustomField>