force-app/main/default/objects/MUSW__Proceeding_Agenda_Item__c/fields/MUSW__Proceeding__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Proceeding__c</fullName>
    <label>Proceeding</label>
    <referenceTo>MUSW__Proceeding2__c</referenceTo>
    <relationshipLabel>Proceeding Agenda Items</relationshipLabel>
    <relationshipName>Proceeding_Agenda_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>